--- a/app/assets/stylesheets/_recent.scss
+++ b/app/assets/stylesheets/_recent.scss
@@ -62,7 +62,7 @@
       .select-level-box{
         color: #2E2F30;
         position: absolute;
-        top: 20px;
+        top: 24px;
         width: 150px;
         height: 120px;
         padding: 16px;
@@ -94,7 +94,7 @@
       .level-search {
         color: #2E2F30;
         position: absolute;
-        top: 20px;
+        top: 24px;
         width: 220px;
         height: 340px;
         padding: 16px;
@@ -143,7 +143,7 @@
     .version-search {
       color: #2E2F30;
       position: absolute;
-      top: 20px;
+      top: 24px;
       width: 320px;
       height: 330px;
       padding: 16px;
@@ -171,7 +171,7 @@
     background-color: #101614;
     .click-area{
       width: 100%;
-      height: 36px;
+      height: 44px;
       position: absolute;
       top: 0;
     }
@@ -202,7 +202,7 @@
     top: 30px;
     right: 0;
     left: 0;
-    margin: 0 auto;
+    margin: 4px auto 0;
     position: absolute;
   }
 
