--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
       <div class="content">
         <%= yield %>
       </div>
+      <div class="footer">
+        <p>Copyright © 2017 Daiki Minakawa All Rights Reserved.</p>
+      </div>
     </div>
   </body>
 </html>
