[ADD]ファイルエラー追加

--- a/app/views/score/index.html.erb
+++ b/app/views/score/index.html.erb
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <% if @data %>
+  <% if @data && @data.length > 0 %>
       <div class="record-head-wrap">
         <div class=" record-wrap record-head">
           <div class="record-first-elm">
@@ -137,5 +137,9 @@
           </div>
       <% end %>
       </div>
+  <% else %>
+    <div class="no-score">
+      <p>スコアが存在しません。</p>
+    </div>
   <% end %>
 </div>
