--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -8,7 +8,7 @@
   padding: 8px 16px;
   h2{
     font-size: 1.5rem;
-    margin: 16px 0;
+    margin: 16px 0 32px;
   }
   h3{
     font-size: 1.3rem;
@@ -26,16 +26,22 @@
           text-align: center;
         }
         .record-name{
-          width: 50%;
+          width: 40%;
+        }
+        .record-score{
+          width: 10%;
+        }
+        .record-miss{
+          width: 10%;
+        }
+        .record-type{
+          width: 20%;
         }
         .record-level{
           width: 10%;
         }
-        .record-score{
-          width: 15%;
-        }
         .record-date{
-          width: 20%;
+          width: 10%;
         }
       }
       .record-head{
