[UPDATE]フォントサイズ変更

--- a/app/assets/stylesheets/_csv.scss
+++ b/app/assets/stylesheets/_csv.scss
@@ -1,6 +1,7 @@
 .panel-wrapper {
   h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
   }
   .csv-list-wrapper {
     border: solid 1px #fff;
