--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,8 +4,9 @@
 @import "index";
 @import "nav";
 @import "login";
-@import "csv_upload";
 @import "csv";
 @import "recent";
+@import "compare";
 @import "pagination";
+@import "csv_upload";
 @import "footer";
