--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
           <ul>
             <li><%= link_to 'トップ', top_path %></li>
             <li><%= link_to 'スコア一覧', recent_path %></li>
-            <li><a>スコア比較</a></li>
+            <li><%= link_to 'スコア比較', compare_path %></li>
             <li><%= link_to 'CSV管理', csv_path %></li>
             <li>Coming Soon</li>
             <li><%= link_to 'ログアウト', logout_path %></li>
