--- a/app/assets/stylesheets/_recent.scss
+++ b/app/assets/stylesheets/_recent.scss
@@ -26,6 +26,7 @@
       #csv{
         padding:0 8px;
         height: 24px;
+        min-width: 200px;
       }
       .search-element{
         display: flex;
