[ADD]サンプル追加

--- a/app/views/login/login.html.erb
+++ b/app/views/login/login.html.erb
@@ -10,6 +10,13 @@
   <div class="login-wrapper">
     <h1>beatmania IIDX スコアマネージャ(Saya)</h1>
     <p class="button-container"><%= link_to 'Twitterでログイン', '/auth/twitter' , class: :button %></p>
+    <div class="sample">
+      <p><%= link_to 'サンプルはこちら', sample_path , class: :sample_link %></p>
+    </div>
+    <div class="message">
+      <p>ご要望・質問はTwitterから</p>
+      <p class="my-twitter-container"><a href="https://twitter.com/oliver_diary" target="_blank">@oliver_diary</a></p>
+    </div>
   </div>
 </div>
 </body>
