--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -1,6 +1,5 @@
 .login-wrapper{
-  margin-top: calc(50vh - 100px);
-  margin-bottom: calc(50vh - 70px);
+  margin-top: calc(50vh - 120px);
   text-align: center;
   h1 {
     font-size: 3rem;
@@ -22,13 +21,13 @@
     background-color: #5AABF3;
   }
 
-  a {
-  margin: 0 auto;
-  padding: 0;
-  font-size: 2.5rem;
-  vertical-align: baseline;
-  background: transparent;
-  text-decoration: none;
+  a{
+    margin: 0 auto;
+    padding: 0;
+    font-size: 2.5rem;
+    vertical-align: baseline;
+    background: transparent;
+    text-decoration: none;
   }
   .button-container .button:before {
     content: '';
@@ -42,3 +41,56 @@
     background-image: image-url("twitter_logo.png");
   }
 }
+
+.sample{
+  margin-top: 60px;
+  text-align: right;
+}
+
+.sample a:hover {
+  text-shadow: 0 0 20px rgba(255, 255, 0, 1);
+  color: #BF7900;
+}
+.message{
+  margin-top: 24px;
+  text-align: right;
+}
+.my-twitter-container{
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: 0;
+  position: relative;
+  display: block;
+  color: #fff;
+  width: 15%;
+  text-align: center;
+  border-radius: 4px;
+  line-height: 40px;
+  padding-left: 40px;
+  height: 40px;
+  box-sizing: border-box;
+  border: none;
+  overflow: hidden;
+  background-color: #5AABF3;
+  a{
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    font-size: 1.0rem;
+    vertical-align: baseline;
+    background: transparent;
+    text-decoration: none;
+  }
+}
+.my-twitter-container a:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  background-size: 100%;
+  background-image: image-url("twitter_logo.png");
+}
+
