--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,19 @@
       gtag('config', 'UA-104969273-2');
     </script>
     <title>IIDX スコアマネージャ(Saya)</title>
+    <meta property="og:title" content="IIDX スコアマネージャ(Saya)" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sayaiidx.com" />
+    <meta property="og:image" content="https://sayaiidx.com/images/ogp.png" />
+    <meta property="og:site_name" content="IIDX スコアマネージャ(Saya)" />
+    <meta property="og:description" content="このサイトはIIDXのスコアを管理するためのサイトです。２つのCSVファイルを使用してスコアの比較をすることも可能です。" />
+
+    <meta property="fb:app_id" content="1463699533715761" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@oliver_diary" />
+    <meta name="twitter:creator" content="@oliver_diary" />
+    <meta name="google-site-verification" content="g7USIbgwnEWBz96LqpNRg3Am2GvPPYDIemL1ekbhXno" />
     <%= csrf_meta_tags %>
-    <%= favicon_link_tag('/assets/favicon.ico') %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
