--- a/app/views/component/_version_box.html.erb
+++ b/app/views/component/_version_box.html.erb
@@ -4,6 +4,10 @@
     <%= label_tag 'v', 'ALL' %>
   </div>
   <div class="version-search-item">
+    <%= check_box_tag 'v25', 'CANNON BALLERS', true %>
+    <%= label_tag 'v25', 'CANNON BALLERS' %>
+  </div>
+  <div class="version-search-item">
     <%= check_box_tag 'v24', 'SINOBUZ', true %>
     <%= label_tag 'v24', 'SINOBUZ' %>
   </div>
