--- a/app/views/sample/compare.html.erb
+++ b/app/views/sample/compare.html.erb
@@ -3,6 +3,7 @@
   <div class="element-search-wrap">
     <p class="search-element">
       <label for="compare_csv1">1つ目のCSVファイルを選択：</label>
+      <!--TODO-->
       <%= select_tag 'compare_csv1', options_for_select(@csvs) %>
     </p>
     <p class="search-element">
