--- a/app/assets/stylesheets/_compare.scss
+++ b/app/assets/stylesheets/_compare.scss
@@ -6,7 +6,7 @@
   .search-element{
     margin: 16px ;
   }
-  #compare_csv1, #compare_csv2{
+  #compare_csv1, #compare_csv2, #sample_compare_csv1, #sample_compare_csv2{
     padding:0 8px;
     height: 24px;
     min-width: 200px;
