--- a/app/assets/stylesheets/_recent.scss
+++ b/app/assets/stylesheets/_recent.scss
@@ -23,7 +23,7 @@
         padding:0 8px;
         border-radius: 8px;
       }
-      #csv{
+      #csv, #sample_csv{
         padding:0 8px;
         height: 24px;
         min-width: 200px;
