--- a/app/views/sample/index.html.erb
+++ b/app/views/sample/index.html.erb
@@ -4,8 +4,8 @@
   <div class="recent-header">
     <div class="element-search-wrap">
       <p class="search-element">
-        <label for="csv">CSVファイルを選択：</label>
-        <%= select_tag 'csv', options_for_select(@csvs) %>
+        <label for="sample_csv">CSVファイルを選択：</label>
+        <%= select_tag 'sample_csv', options_for_select(@csvs) %>
       </p>
       <p class="search-element">
         <label for="element-search">検索：</label>
